<resources>
    <string name="app_name">MyMovieApp</string>

    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top rated</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>

    <string name="search_hint">Search movies</string>
    <string name="title_crew">Crew:</string>
    <string name="title_recommendation">Recommendation:</string>

    <string name="image_content_description">Image</string>

    <string name="rating_denominator">/10</string>

    <string name="title_favorite_movie">Favorite movie</string>
    <string name="title_favorite_actors">Favorite crew</string>
    <string name="title_recently_movie">Recently viewed</string>
    <string name="no_favorites">No favorite movies</string>
    <string name="no_actors">No favorite crews</string>
    <string name="no_recently">No movie recently viewed</string>
    <string name="text_theme_switch">Theme day/night</string>

</resources>
