<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.favorite.FavoriteFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/large"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
                android:id="@+id/card_favorite_movie"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/bg_gradient"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="@dimen/details_favorite_icon_width"
                        android:layout_height="@dimen/details_favorite_icon_width"
                        android:layout_marginRight="@dimen/large"
                        android:layout_marginEnd="@dimen/large"
                        android:src="@drawable/favorite_movie"
                        android:contentDescription="@string/image_content_description"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:text="@string/title_favorite_movie"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/card_favorite_actor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/large"
                app:cardUseCompatPadding="true"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/bg_gradient"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="@dimen/details_favorite_icon_width"
                        android:layout_height="@dimen/details_favorite_icon_width"
                        android:layout_marginRight="@dimen/large"
                        android:layout_marginEnd="@dimen/large"
                        android:src="@drawable/favorite_crew"
                        android:contentDescription="@string/image_content_description"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:text="@string/title_favorite_actors"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/card_recently_movie"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/large"
                app:cardUseCompatPadding="true"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/bg_gradient"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="@dimen/details_favorite_icon_width"
                        android:layout_height="@dimen/details_favorite_icon_width"
                        android:padding="@dimen/small"
                        android:layout_marginRight="@dimen/large"
                        android:layout_marginEnd="@dimen/large"
                        android:src="@drawable/history"
                        android:contentDescription="@string/image_content_description"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:text="@string/title_recently_movie"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>